appending dropdown on body, to avoid overflow problems

--- a/chosen/chosen.css
+++ b/chosen/chosen.css
@@ -1,3 +1,8 @@
+/* Fixing overflow:hidden bug */
+.chzn-container .chzn-drop {
+  position: fixed;
+}
+
 /* @group Base */
 .chzn-container {
   font-size: 13px;
@@ -6,7 +11,7 @@
   zoom: 1;
   *display: inline;
 }
-.chzn-container .chzn-drop {
+.chzn-drop {
   background: #fff;
   border: 1px solid #aaa;
   border-top: 0;
@@ -93,14 +98,14 @@
   width: 100%;
   height: 100%;
 }
-.chzn-container-single .chzn-search {
+.chzn-search {
   padding: 3px 4px;
   position: relative;
   margin: 0;
   white-space: nowrap;
   z-index: 1010;
 }
-.chzn-container-single .chzn-search input {
+.chzn-search input {
   background: #fff url('chosen-sprite.png') no-repeat 100% -22px;
   background: url('chosen-sprite.png') no-repeat 100% -22px, -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(1%, #eeeeee), color-stop(15%, #ffffff));
   background: url('chosen-sprite.png') no-repeat 100% -22px, -webkit-linear-gradient(top, #eeeeee 1%, #ffffff 15%);
@@ -115,7 +120,7 @@
   font-family: sans-serif;
   font-size: 1em;
 }
-.chzn-container-single .chzn-drop {
+.chzn-drop {
   -webkit-border-radius: 0 0 4px 4px;
   -moz-border-radius   : 0 0 4px 4px;
   border-radius        : 0 0 4px 4px;
@@ -223,7 +228,7 @@
 /* @end */
 
 /* @group Results */
-.chzn-container .chzn-results {
+.chzn-results {
   margin: 0 4px 4px 0;
   max-height: 240px;
   padding: 0 0 0 4px;
@@ -236,18 +241,18 @@
   margin: -1px 0 0;
   padding: 0;
 }
-.chzn-container .chzn-results li {
+.chzn-results li {
   display: none;
   line-height: 15px;
   padding: 5px 6px;
   margin: 0;
   list-style: none;
 }
-.chzn-container .chzn-results .active-result {
+.chzn-results .active-result {
   cursor: pointer;
   display: list-item;
 }
-.chzn-container .chzn-results .highlighted {
+.chzn-results .highlighted {
   background-color: #3875d7;
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3875d7', endColorstr='#2a62bc', GradientType=0 );  
   background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, color-stop(20%, #3875d7), color-stop(90%, #2a62bc));
@@ -258,23 +263,23 @@
   background-image: linear-gradient(top, #3875d7 20%, #2a62bc 90%);
   color: #fff;
 }
-.chzn-container .chzn-results li em {
+.chzn-results li em {
   background: #feffde;
   font-style: normal;
 }
-.chzn-container .chzn-results .highlighted em {
+.chzn-results .highlighted em {
   background: transparent;
 }
-.chzn-container .chzn-results .no-results {
+.chzn-results .no-results {
   background: #f4f4f4;
   display: list-item;
 }
-.chzn-container .chzn-results .group-result {
+.chzn-results .group-result {
   cursor: default;
   color: #999;
   font-weight: bold;
 }
-.chzn-container .chzn-results .group-option {
+.chzn-results .group-option {
   padding-left: 15px;
 }
 .chzn-container-multi .chzn-drop .result-selected {
